standalong-milvus/milrag-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: milrag
  name: milrag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: milrag
  template:
    metadata:
      labels:
        app: milrag
      name: milrag-standalone
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: milconfig
        - secretRef:
            name: milrag-google-api-key
        image: ksrinimba/milrag:1.2.1
        imagePullPolicy: IfNotPresent
        name: milrag
        volumeMounts:
        - mountPath: /app/MilvusRag.py
          name: milragpy
          subPath: MilvusRag.py
        - mountPath: /app/.streamlit/secrets.toml 
          name: streamlitpass
          subPath: secrets.toml 
        - mountPath: /tmp/activitylog
          name: log-pv-storage
      restartPolicy: Always
      volumes:
      - configMap:
          defaultMode: 420
          name: milragpy
        name: milragpy
      - configMap: # Contains embedEtcd.yaml and user.yaml
          defaultMode: 420
          name: streamlitpass
        name: streamlitpass
      - name: log-pv-storage
        persistentVolumeClaim:
          claimName: activitylog
