standalong-milvus/milrag-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: milrag
  name: milrag
spec:
  ports:
  - port: 8501
    protocol: TCP
    targetPort: 8501
  selector:
    app: milrag
  type: NodePort
