standalong-milvus/milrag-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
  name: milrag
spec:
  rules:
  - host: gemini.ryzon7-k8s.opsmx.org
    http:
      paths:
      - backend:
          service:
            name: milrag
            port:
              number: 8501
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
